[project]
name = "aganitha_backend_task"
version = "0.1.0"
description = "A Python program to fetch research papers from PubMed"
authors = [
    {name = "saisrinivas000",email = "saisrinivas.b.offical@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "main:main"